apps/it-tools/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: it-tools-ingress-ext
  namespace: tools
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`itt.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: it-tools
          port: main
