apps/it-tools/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: it-tools-ingress
  namespace: tools
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`itt.sobrinho.pt`)
      kind: Rule
      services:
        - name: it-tools
          port: main
  tls:
    secretName: it-tools-cert
